refactor: fix style